--- a/test/ejabberd_tests/rebar.config
+++ b/test/ejabberd_tests/rebar.config
@@ -4,7 +4,7 @@
 {require_otp_vsn, "R?1[45678]"}.
 
 {deps, [
-        {escalus, ".*", {git, "git://github.com/esl/escalus.git", "7310978"}},
+        {escalus, ".*", {git, "git://github.com/esl/escalus.git", {branch, "export-message-stanza-generator"}}},
         {exml, ".*", {git, "git://github.com/esl/exml.git", "2.2.0"}},
         {usec, ".*", {git, "git://github.com/esl/usec.git", {branch, "master"}}},
         {mustache, ".*", {git, "git://github.com/mojombo/mustache.erl.git", {branch, "master"}}},
