add test deps to cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ cache:
         directories:
                 - dialyzer
                 - deps
+                - test/ejabberd_tests/deps
 
 before_cache:
         - rm -f dialyzer/apps.*
