rebar3: Bundle meck for tests

--- a/rebar.config
+++ b/rebar.config
@@ -54,6 +54,7 @@
          [mongooseim,
           ejabberd,
           %% TODO: temporary, this should be determined dynamically
+          meck,
           pgsql]},
 
         {dev_mode, true},
