--- a/rebar.config
+++ b/rebar.config
@@ -54,6 +54,7 @@
          [mongooseim,
           ejabberd,
           %% TODO: temporary, this should be determined dynamically
+          inets,  %% just because of http_uri module
           meck,
           pgsql,
           tools]},
