--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ install:
 before_script:
         - tools/travis-setup-db.sh
         - if [ $PRESET = 'ldap_mnesia' ]; then sudo tools/travis-setup-ldap.sh; fi
-script: tools/travis-test.sh $PRESET
+script:
+        - tools/travis-test.sh $PRESET
 
 after_failure:
         - cat `ls -1 -d -t apps/ejabberd/logs/ct_run* | head -1`/apps.ejabberd.logs/run.*/suite.log
@@ -28,7 +29,7 @@ after_failure:
 
 after_success:
         - make cover_report
-        - if [ $PRESET = 'internal_mnesia' ] && [ $TRAVIS_OTP_RELEASE = "18.3" ]; then tools/travis-build-and-push-docker.sh; fi
+        - if [ $PRESET.$TRAVIS_OTP_RELEASE = 'internal_mnesia.18.3' ]; then tools/travis-build-and-push-docker.sh; fi
 
 after_script:
         - sudo pip install awscli --ignore-installed six
