--- a/rel/files/ejabberd.cfg
+++ b/rel/files/ejabberd.cfg
@@ -410,7 +410,7 @@
 %% To use both anonymous and internal authentication:
 %%
 %%{host_config, "public.example.org", [{auth_method, [internal, anonymous]}]}.
-{{host_config}}
+{{{host_config}}}
 
 %%%.   ==============
 %%%'   DATABASE SETUP
@@ -424,7 +424,7 @@
 %%
 %% MySQL server:
 %%
-{{odbc_server}}
+{{{odbc_server}}}
 %%
 %% If you want to specify the port:
 %%{odbc_server, {mysql, "server", 1234, "database", "username", "password"}}.
@@ -460,7 +460,7 @@
 %%% RIAK SETUP
 %%% ====================
 
-{{riak_server}}
+{{{riak_server}}}
 
 %%% ==================================
 %%% POOLS OF OUTGOING HTTP CONNECTIONS
@@ -479,7 +479,7 @@
 %%% CASSANDRA SETUP
 %%% ====================
 
-{{cassandra_servers}}
+{{{cassandra_server}}}
 
 %% Connect to localhost:9042, one worker, one pool, shared between all hosts
 %%{cassandra_servers, [{default, []}]}.
@@ -863,7 +863,7 @@
 
  ]}.
 
-{{module_host_config}}
+{{{module_host_config}}}
 %%
 %% Enable modules with custom options in a specific virtual host
 %%
