--- a/test.disabled/ejabberd_tests/rebar.config
+++ b/test.disabled/ejabberd_tests/rebar.config
@@ -7,7 +7,7 @@
         {escalus, ".*", {git, "git://github.com/esl/escalus.git", "e1eca08218c21f1ac9d45431194e4463119efff6"}},
         {exml, ".*", {git, "git://github.com/esl/exml.git", "2.4.0"}},
         {usec, ".*", {git, "git://github.com/esl/usec.git", {branch, "master"}}},
-        {mustache, ".*", {git, "git://github.com/mojombo/mustache.erl.git", {branch, "master"}}},
+        {bbmustache, ".*", {git, "https://github.com/soranoba/bbmustache.git", "v1.4.0"}},
         {katt, ".*", {git, "git://github.com/for-GET/katt.git", {tag, "1.5.2"}}},
         {erlsh, ".*", {git, "git://github.com/proger/erlsh.git", "2fce513"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "0.14.8"}},
