--- a/rel/files/ejabberd.cfg
+++ b/rel/files/ejabberd.cfg
@@ -267,7 +267,7 @@
 %% Allowed values are: false optional required required_trusted
 %% You must specify a certificate file.
 %%
-{{s2s_use_starttls}}
+{{{s2s_use_starttls}}}
 %%
 %% s2s_certfile: Specify a certificate file.
 %%
@@ -370,7 +370,7 @@
 %%
 %%{auth_method, ldap}.
 %%
-{{auth_ldap}}
+{{{auth_ldap}}}
 %% List of LDAP servers:
 %%{ldap_servers, ["localhost"]}.
 %%
@@ -450,7 +450,7 @@
 %% Specifies what database is used over the ODBC layer
 %% Can take values odbc, pgsql, mysql
 %% In some cases (for example for MAM with pgsql) it is required to set proper value.
-{{odbc_server_type}}
+{{{odbc_server_type}}}
 %%
 %% Number of connections to open to the database for each virtual host
 %%
