--- a/rebar.config
+++ b/rebar.config
@@ -119,7 +119,23 @@
    {override, stringprep,
     [ {provider_hooks,
        [ {post, [ {compile, {pc, compile}},
-                  {clean, {pc, clean}} ] }] } ]}
+                  {clean, {pc, clean}} ] }] } ]},
+   %% Workaround for riak-client by @lucafavatella
+   {override, rebar3_protobuffs_plugin, [{deps, [{protobuffs, {git, "https://github.com/basho/erlang_protobuffs.git", {tag, "0.9.0"}}}]}]},
+   {override, riak_pb,
+    [
+     {plugins, [
+                {riak_pb_msgcodegen, {git, "https://github.com/tsloughter/riak_pb_msgcodegen.git", {ref, "dc51e30"}}},
+                {rebar3_protobuffs_plugin, {git, "https://github.com/cmkarlsson/rebar3_protobuffs_plugin.git", {tag, "0.1.1"}}}
+               ]
+     },
+     {provider_hooks, [{pre, [
+                              {compile, {protobuffs, compile}},
+                              {compile, riak_pb_msgcodegen}
+                             ]
+                       }]}
+    ]}
+
  ]}.
 
 {cover_enabled, true}.
