--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,11 @@ before_install:
         - tools/travis-generate-pass.sh
         - tools/configure $REL_CONFIG
 install:
-        - ./rebar3 compile
-        - make dev
-        - tools/travis-build-tests.sh
+        - echo "skip"
 before_script:
         - tools/travis-setup-db.sh
         - if [ $PRESET = 'ldap_mnesia' ]; then sudo tools/travis-setup-ldap.sh; fi
-script: tools/travis-test.sh -p $PRESET
+script: echo "skip all tests" #tools/travis-test.sh -p $PRESET
 
 after_failure:
         - cat `ls -1 -d -t apps/ejabberd/logs/ct_run* | head -1`/apps.ejabberd.logs/run.*/suite.log
@@ -53,21 +51,7 @@ branches:
 otp_release:
         - 18.3
 env:
-        - PRESET=internal_mnesia DB=mnesia REL_CONFIG=with-all
-        - PRESET=mysql_redis DB=mysql REL_CONFIG="with-mysql with-redis"
-        - PRESET=odbc_pgsql_mnesia DB=pgsql REL_CONFIG=with-odbc
-        - PRESET=ldap_mnesia DB=mnesia REL_CONFIG=with-none
-        - PRESET=riak_mnesia DB=riak REL_CONFIG=with-riak
-        - PRESET=cassandra_mnesia DB=cassandra REL_CONFIG=with-cassandra CASSANDRA_VERSION=3.9
-
-matrix:
-    include:
-        - otp_release: 19.2
-          env: PRESET=dialyzer_only
-        - otp_release: 19.2
-          env: PRESET=pgsql_mnesia DB=pgsql REL_CONFIG=with-pgsql
-        - otp_release: 17.5
-          env: PRESET=internal_mnesia DB=mnesia REL_CONFIG=with-none
+        - PRESET=mssql_mnesia DB=mssql REL_CONFIG=with-odbc
 
 notifications:
     webhooks:
