--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ branches:
 otp_release:
         - 18.3
 env:
-        - PRESET=mssql_mnesia DB=mssql REL_CONFIG=with-odbc
+        - PRESET=odbc_mssql_mnesia DB=mssql REL_CONFIG=with-odbc
 
 notifications:
     webhooks:
