use MongooseIMmssql DSN in test.config

--- a/test.disabled/ejabberd_tests/test.config
+++ b/test.disabled/ejabberd_tests/test.config
@@ -187,7 +187,7 @@
      [{sm_backend, "{mnesia, []}"},
       {auth_method, "odbc"},
       {odbc_pools, "{pool, odbc, default}."},
-      {odbc_server, "{odbc_server, \"DSN=mongooseim-mssql;UID=SA;PWD=%ODBC_PASSWORD%\"}."},
+      {odbc_server, "{odbc_server, \"DSN=MongooseIMmssql;UID=SA;PWD=%ODBC_PASSWORD%\"}."},
       {odbc_server_type, "{odbc_server_type, mssql}."},
       {mod_last, "{mod_last, [{backend, odbc}]},"},
       {mod_privacy, "{mod_privacy, [{backend, odbc}]},"},
