--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,6 @@ otp_release:
         - 18.3
 env:
         - PRESET=internal_mnesia DB=mnesia REL_CONFIG=with-all
-        - PRESET=mysql_redis DB=mysql REL_CONFIG="with-mysql with-redis"
         - PRESET=odbc_pgsql_mnesia DB=pgsql REL_CONFIG=with-odbc
         - PRESET=ldap_mnesia DB=mnesia REL_CONFIG=with-none
         - PRESET=riak_mnesia DB=riak REL_CONFIG=with-riak
@@ -67,7 +66,7 @@ matrix:
         - otp_release: 19.2
           env: PRESET=pgsql_mnesia DB=pgsql REL_CONFIG=with-pgsql
         - otp_release: 17.5
-          env: PRESET=internal_mnesia DB=mnesia REL_CONFIG=with-none
+          env: PRESET=mysql_redis DB=mysql REL_CONFIG="with-mysql with-redis"
 
 notifications:
     webhooks:
