configure alice to send pretty formatted XML

--- a/test.disabled/ejabberd_tests/test.config
+++ b/test.disabled/ejabberd_tests/test.config
@@ -50,6 +50,7 @@
 
 {escalus_users, [
     {alice, [
+        {formatting, pretty},
         {username, <<"alicE">>},
         {server, <<"localhost">>},
         {password, <<"matygrysa">>}]},
