--- a/rebar.config
+++ b/rebar.config
@@ -33,38 +33,38 @@
   {cuesport, ".*", {git, "git://github.com/esl/cuesport.git", "d82ff25"}},
   {redo, ".*", {git, "git://github.com/Wallapop/redo.git", "35a8d1c"}},
   {exml, ".*", {git, "git://github.com/esl/exml.git", {ref, "013fc58"}}},
-  {lager, ".*", {git, "git://github.com/basho/lager.git", "3.2.4"}},
+  {lager, "3.2.4"},
   {lager_syslog, ".*", {git, "git://github.com/basho/lager_syslog.git", "3.0.3"}},
-  {cowboy, ".*", {git, "git://github.com/ninenines/cowboy.git", "1.1.2"}},
+  {cowboy, "1.1.2"},
   {exometer_core, {git, "git://github.com/esl/exometer_core.git", {branch, "master"}}},
   {exometer_report_graphite, {git, "git://github.com/esl/exometer_report_graphite.git", {branch, "master"}}},
   {exometer_report_statsd, {git, "git://github.com/esl/exometer_report_statsd.git", {branch, "master"}}},
   {mochijson2, ".*", {git, "git://github.com/bjnortier/mochijson2.git", {branch, "master"}}},
-  {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "0.14.11"}},
+  {jiffy, "0.14.11"},
   {fusco, ".*", {git, "git://github.com/esl/fusco.git", {branch, "master"}}},
   {idna, ".*", {git, "git://github.com/benoitc/erlang-idna.git", {tag, "1.2.0"}}},
-  {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.5.1"}}},
-  {uuid, ".*", {git, "git://github.com/okeuday/uuid.git", {tag, "v1.7.1"}}},
+  {poolboy, "1.5.1"},
+  {uuid, "1.7.1", {pkg, uuid_erl}},
   {fast_tls, ".*", {git, "git://github.com/processone/fast_tls.git", "a166f0e9fe78304e5ca628fd5eff57c850241813"}},
   {lasse, ".*", {git, "git://github.com/inaka/lasse.git", "692eaec"}},
-  {worker_pool, ".*", {git, "git://github.com/inaka/worker_pool.git", {tag, "3.0.0"}}},
+  {worker_pool, "3.0.0"},
 
-  {riakc, ".*", {git, "https://github.com/basho/riak-erlang-client", "2.5.3"}},
+  {riakc, "2.5.3"},
   {pooler, ".*", {git, "https://github.com/seth/pooler.git", "521f568"}},
   {cqerl, ".*", {git, "https://github.com/matehat/cqerl.git", {ref, "1e37a572da3018540206c5f2699e4587619aba34"}}},
   {mysql, ".*", {git, "git://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
-  {epgsql, ".*", {git, "git://github.com/epgsql/epgsql.git", {tag, "3.4.0"}}},
+  {epgsql,"3.4.0"},
 
-  {cache_tab, ".*", {git, "git://github.com/processone/cache_tab", {tag, "1.0.12"}}},
-  {stringprep, ".*", {git, "git://github.com/processone/stringprep.git", {tag, "1.0.7"}}},
+  {cache_tab, "1.0.12"},
+  {stringprep, "1.0.7"},
 
-  {proper, ".*", {git, "git://github.com/manopapad/proper.git", {tag, "v1.2"}}},
-  {meck, ".*", {git, "git://github.com/eproxus/meck.git", {tag, "0.8.6"}}},
+  {proper, "1.2.0"},
+  {meck, "0.8.6"},
 
   {pa, ".*", {git, "git://github.com/erszcz/pa.git", "e53c540"}},
   {usec, ".*", {git, "git://github.com/esl/usec.git", {branch, "master"}}},
-  {bbmustache, ".*", {git, "git://github.com/soranoba/bbmustache.git", {tag, "v1.4.0"}}},
-  {recon, ".*", {git, "git://github.com/ferd/recon.git", "2.3.2"}},
+  {bbmustache, "1.4.0"},
+  {recon, "2.3.2"},
   {erlcloud, ".*", {git, "git://github.com/erlcloud/erlcloud.git", "c119698"}},
   {jwerl, ".*", {git, "git://github.com/emedia-project/jwerl.git", "3f365d1"}},
   {csv, ".*", {git, "https://github.com/bszaf/csv.git", {ref, "b0b854d"}}},
@@ -72,7 +72,7 @@
   {observer_cli, "1.1.0"},
   {nklib, {git, "https://github.com/NetComposer/nklib.git", {ref, "fb63a1d"}}},
   {nksip, {git, "https://github.com/NetComposer/nksip.git", {ref, "1a29ef3"}}},
-  {eredis, {git, "git://github.com/wooga/eredis.git", {tag, "v1.0.8"}}}
+  {eredis, "1.0.8"}
  ]}.
 
 {relx, [{release, { mongooseim, {cmd, "cat VERSION | tr -d '\r\n'"} },
