update some deps to run MongooseIM and tests on Erlang/OTP 21

--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,7 @@
   {cuesport, ".*", {git, "https://github.com/esl/cuesport.git", "d82ff25"}},
   {redo, ".*", {git, "https://github.com/Wallapop/redo.git", "35a8d1c"}},
   {exml, ".*", {git, "https://github.com/esl/exml.git", {tag, "3.0.1"}}},
-  {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", "3.6.2"}},
+  {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {ref, "06f676a"}}},
   {lager_syslog, ".*", {git, "https://github.com/erlang-lager/lager_syslog.git", "3.0.3"}},
   {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", "1.1.2"}},
   {exometer_core, {git, "https://github.com/esl/exometer_core.git", {branch, "master"}}},
@@ -65,7 +65,7 @@
   {stringprep, ".*", {git, "https://github.com/processone/stringprep.git", {tag, "1.0.7"}}},
 
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", {tag, "v1.2"}}},
-  {meck, ".*", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.6"}}},
+  {meck, ".*", {git, "https://github.com/eproxus/meck.git", {ref, "65b79f4"}}},
 
   {pa, ".*", {git, "https://github.com/erszcz/pa.git", "e53c540"}},
   {usec, ".*", {git, "https://github.com/esl/usec.git", {branch, "master"}}},
@@ -166,6 +166,7 @@
                                   {d, deprecated_now},
                                   {d, deprecated_19}]}]},
    {override, hamcrest, [{plugins, []}]},
+   {override, eper, [{erl_opts, [debug_info]}]},
    %% Erlang JWT Library is in elixir and wants elvis for tests
    %% Remove elvis plugin to reduce deps
    {override, jwerl, [{plugins, [rebar3_elixir, rebar3_hex]}]}
