--- a/big_tests/rebar.config
+++ b/big_tests/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info,
             {i, ["include"]}]}.
 
-{require_otp_vsn, "(1[89])|20"}.
+{require_otp_vsn, "(1[89])|2[01]"}.
 
 %% We use https:// instead of git://
 {deps, [{usec, ".*", {git, "https://github.com/esl/usec.git", {branch, "master"}}},
@@ -10,7 +10,7 @@
         {erlsh, ".*", {git, "https://github.com/proger/erlsh.git", "2fce513"}},
         {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", "0.14.8"}},
         {proper, ".*", {git, "https://github.com/manopapad/proper.git", "v1.2"}},
-        {escalus, ".*", {git, "https://github.com/esl/escalus.git", {ref, "c761b6068c4cbda18b58deaa87748df24c16c576"}}},
+        {escalus, ".*", {git, "https://github.com/esl/escalus.git", {branch, "erlang-21"}}},
         %% Switch cowboy to upstream after ditching support for OTP 17.x
         {cowboy, ".*", {git, "https://github.com/rslota/cowboy.git", {tag, "2.0.0-pre.7-r17"}}},
         {shotgun, ".*", {git, "https://github.com/inaka/shotgun.git", "4e67065"}},
