--- a/big_tests/test.config
+++ b/big_tests/test.config
@@ -278,7 +278,8 @@
       %% https://github.com/basho/riak-erlang-client/issues/232#issuecomment-178612129
       %% We also set ciphers in tools/setup_riak on the server side.
       {riak_server, "{riak_server, [{pool_size, 5}, {address, \"127.0.0.1\"},{port, 8087},
-                                    {ssl_opts, [{ciphers, [\"AES256-SHA\", \"DHE-RSA-AES128-SHA256\"]}]},
+                                    {ssl_opts, [{ciphers, [\"AES256-SHA\", \"DHE-RSA-AES128-SHA256\"]},
+                                                {server_name_indication, disable}]},
                                     {credentials, \"ejabberd\", \"mongooseim_secret\"},
                                     {cacertfile, \"priv/ssl/cacert.pem\"}]}."},
       {mod_roster, "{mod_roster, [{backend, riak}]},"},
