--- a/.travis.yml
+++ b/.travis.yml
@@ -104,11 +104,7 @@ matrix:
     - otp_release: 21.0
       env: PRESET=riak_mnesia DB=riak REL_CONFIG="with-riak with-jingle-sip" RUN_SMALL_TESTS=true
     - language: generic
-      env: PRESET=pkg pkg_PLATFORM=centos7
-           SKIP_COMPILE=1 SKIP_RELEASE=1 SKIP_BUILD_TESTS=1
-           SKIP_COV=1 SKIP_REPORT_UPLOAD=1
-    - language: generic
-      env: PRESET=pkg pkg_PLATFORM=debian_stretch
+      env: PRESET=pkg pkg_PLATFORMS="centos7 debian_stretch"
            SKIP_COMPILE=1 SKIP_RELEASE=1 SKIP_BUILD_TESTS=1
            SKIP_COV=1 SKIP_REPORT_UPLOAD=1
 
